Fixes #926 - Review listeners methods that lack ServerMessage.
Reviewed:
- BayeuxServer.SessionListener.sessionRemoved(...)
- ServerSession.AddListener -> ServerSession.AddedListener
- ServerSession.RemoveListener -> ServerSession.RemovedListener
- ServerSession.MaxQueueListener -> ServerSession.QueueMaxedListener

Kept backwards compatibility through default methods and inheritance.
Updated implementation to call the new methods.
Updated code to use the new listeners/methods.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>